--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-192x192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Pretendard Font -->
@@ -15,13 +15,13 @@
     />
 
     <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#6CA344" />
     <meta
       name="description"
-      content="Tennis court management and booking app"
+      content="함께 치는 테니스, WeHand - 테니스 매칭 & 커뮤니티 플랫폼"
     />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="mask-icon" href="/masked-icon.svg" color="#ffffff" />
+    <link rel="apple-touch-icon" href="/logo-180x180.svg" />
+    <link rel="mask-icon" href="/logo-192x192.svg" color="#6CA344" />
 
     <title>WeHand Tennis</title>
   </head>
