feat: status bar color

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     />
     <link rel="apple-touch-icon" href="/logo-180x180.svg" />
     <link rel="mask-icon" href="/logo-192x192.svg" color="#6CA344" />
+    
+    <!-- iOS Status Bar -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
     <title>WeHand Tennis</title>
   </head>
