feat: remove splash screen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       name="description"
       content="함께 치는 테니스, WeHand - 테니스 매칭 & 커뮤니티 플랫폼"
     />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/logo-180x180.svg" />
     <link rel="mask-icon" href="/logo-192x192.svg" color="#6CA344" />
     
